advanced/10-toleration-off.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    env: test
spec:
  replicas: 4
  selector:
    matchLabels:
      env: test
  template:
    metadata:
      name: nginx
      labels:
        env: test
    spec:
      containers:
      - name: nginx
        image: registry.gitlab.onlineterroir.com/omega/public-reg/nginx:1.17
        imagePullPolicy: IfNotPresent
