advanced/5-affinity-pod-must.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity
spec:
  affinity:
    podAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: friendly
            operator: In
            values:
            - high
        topologyKey: kubernetes.io/os
  containers:
  - name: with-pod-affinity
    image: k8s.gcr.io/pause:2.0
