advanced/5-quota-priority-class.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ResourceQuota
  metadata:
    name: pods-premium
  spec:
    hard:
      cpu: 1
      memory: 500M
      pods: 3
    scopeSelector:
      matchExpressions:
      - operator : In
        scopeName: PriorityClass
        values: ["premium"]
- apiVersion: v1
  kind: ResourceQuota
  metadata:
    name: pods-normal
  spec:
    hard:
      cpu: 200m
      memory: 100M
      pods: 3
    scopeSelector:
      matchExpressions:
      - operator : In
        scopeName: PriorityClass
        values: ["normal"]
---
# -------------------
apiVersion: v1
kind: Pod
metadata:
  name: busy-pod
spec:
  containers:
  - name: liveness
    image: k8s.gcr.io/busybox
    args:
    - /bin/sh
    - -c
    - sleep 600
    resources:
      requests:
        cpu: 200m
        memory: 100M
      limits:
        cpu: 1
        memory: 500M
  priorityClassName: premium
