advanced/6-affinity-pod-want.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-affinity-want
spec:
  affinity:
    podAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - labelSelector:
          matchExpressions:
          - key: friend
            operator: In
            values:
            - high
        topologyKey: kubernetes.io/hostname
  containers:
  - name: with-pod-affinity
    image: k8s.gcr.io/pause:2.0
