advanced/8-affinity-pod-want-not.yaml
apiVersion: v1
kind: Pod
metadata:
  name: with-pod-anti-affinity-want
spec:
  affinity:
    podAntiAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 100
        podAffinityTerm:
          labelSelector:
            matchExpressions:
            - key: friendly
              operator: In
              values:
              - high
          topologyKey: kubernetes.io/hostname
  containers:
  - name: with-pod-affinity
    image: k8s.gcr.io/pause:2.0
